# cpp_trainings

./: .gitignore
channels/: Makefile
channels/include/: channels.h  select.h
channels/src/: main.cpp
passing_by_ref/: Makefile  main  main.cpp
test_cpp/: .gitignore  CMakeLists.txt  README.md
test_cpp/my_project/: CMakeLists.txt  my_test.cpp
threads/: Makefile  button.cpp  button.h  event_queue.cpp  event_queue.h  main.cpp
vulkan-window/: .gitignore  CMakeLists.txt  conanfile.txt
vulkan-window/src/: main.cpp
vulkan-window/src/app/: app.h
